# matviz

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  TESTING.md  etl.py  helpers_graphing.py  histogram_utils.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  viz.py
.github/workflows/: docs.yml  python-publish.yml  test.yml
docs/: requirements.txt
docs/documentation/: etl.py  helpers_graphing.py  histogram_utils.py  viz.py
docs/source/: conf.py  etl.rst  getting_started.md  helpers_graphing.rst  histogram_utils.rst  index.md  index.rst  modules.rst  viz.rst
docs/source/api/: cbrt_scale.md  circle_utils.md  datetime_converter.md  doctools.md  etl.md  helpers.md  histogram_utils.md  index.md  viz.md
docs/source/examples/: etl_utilities.ipynb  histograms.ipynb  index.md  visualization.ipynb
examples/: example_histograms.ipynb
matviz/: __init__.py  cbrt_scale.py  circle_utils.py  datetime_converter.py  doctools.py  etl.py  helpers.py  helpers_graphing.py  histogram_utils.py  test_3.py  viz.py
tests/: __init__.py  conftest.py  test_etl.py  test_helpers_graphing.py  test_histogram_utils.py  test_viz.py
