[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matviz"
dynamic = ["version"]
description = "matviz: matrix data visualization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Jonathan Lansey", email = "jonathan@lansey.net"}
]
maintainers = [
    {name = "Jonathan Lansey", email = "jonathan@lansey.net"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: BSD License",
]

# Core dependencies - only what's actually needed
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=0.24.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=5.1",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=5.0.0",
    "nbval>=0.10.0",
    "pytest-mpl>=0.16.0",
]

# Documentation dependencies
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

# Notebook/interactive dependencies
notebook = [
    "mpld3>=0.5.0",
]

# All extras
all = [
    "matviz[dev,docs,notebook]",
]

[project.urls]
Homepage = "https://github.com/JLansey/matviz"
Repository = "https://github.com/JLansey/matviz"
Documentation = "https://github.com/JLansey/matviz"

[tool.setuptools]
packages = ["matviz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "--verbose",
    "--tb=short",
]

[tool.coverage.run]
source = ["matviz"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
[tool.setuptools_scm]
write_to = "matviz/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

